Bug 1646222 - Don't invalidate vector images as a result of size/display mode changes. r=tnikkel

sizemode/displaymode media queries only affect a given browsing context
tree so there's no need to propagate the change to images in that case.

Differential Revision: https://phabricator.services.mozilla.com/D94422